personalWebsite/style.css
.jumbotron{
	background-color: #E6EED6;
	width: 100vw; 
	margin-bottom: 0px;
}
.contain-search{
	margin: 20px 20px 0px 20px;


}

.test6{
	background-color: #090C02;

}
.test3{
	width: 110px;
}
iframe{
	height: 250px;
	width: 400px;

	border: 5px solid #A72608;
	border-radius: 30px;
}

p{
	color: #090C02;
}
.users{
	padding-top: 20px;
}
/*#Avengers{

	

}*/
.dropdownfriends{
	margin-bottom: 20px;
	margin-top: 20px;
	color: #090C02;
}
.friedsOn{
	width: 20px
	margin:0px;
}
.Avengers{
	height: 200px;
	width: 100%;
	margin: 20px 75px 20px 10px;
	border-radius: 20px;

}


.roundb{

	padding: 5px 5px;
	margin-bottom: 20px;
	height:100px; 
	width:100px;
	border-radius: 60px;
	border: 5px solid #A72608;
}

body{
	
	background-color: #A72608;
}
.online{
	width: 20px;
    height: 20px;
    
}

.topt{
	color:#090C02;
	font-weight: bold;
	text-align: left;
	padding-top: 20px;
}
h1{
	color: #E6EED6;
	text-align: center;
}
.test{
	/*border: 2px solid blue;*/
	margin-top: 20px;
	background-color: #F6FFE5;
	padding: 10px 0px;
	border-radius: 20px;
	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);

}
.mainCon{
	padding-bottom: 20px;

}
#section-1{
	background-color: #E6EED6;
	height: 100%;
	margin: 20px 20px;
	border-radius: 8px;
	

}
#section-2{
	background-color: #E6EED6;
	height: 100%;
	margin: 20px 20px;
	border-radius: 8px;

}

/*main{
	background-color: #E6EED6;
	height: 100%;
	margin: 20px 20px;
	border-radius: 8px;
}*/
.main-con{
	border: 2px solid #A72608;

}
.footer-div{
	color: #BBC5AA;
}
footer{
	border: 2px solid white;
	height: 35px;
	margin: 10px 20px; 
	background-color: #E6EED6;
	text-align: center;
	border-radius: 80px
}
.footer-li{
	padding: 0px 0px;
	margin: 0px;
	padding-top: 5px;


}
#foot{
	margin-left: 40px;
	

}

li {
	list-style: none;
	color: #A72608;
	display: inline;
	text-align: center;

}
@media only screen and (max-width: 600px){
	[class*="col-"] {
		width: 100%;
	}
	iframe{
		width: 100%;
		height: 17%%;
	}
	#section-2{
		display: none;
	}

}
@media only screen and (max-width: 767px){
	#go-off{
		display: none;
	}
	.test6{
		height: 52px;

	}
	#off{
		display: none;

	}
	.friedsOn{
		display: none;
	}
	.user-con{
		display: none;
	}
}
@media only screen and (min-width: 768px){
	.dropdownfriends{
		display: none;

	}

}

/*@media only screen and (max-width: 991px){

	
}*/

